--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">CookingAssistance</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="StorageMaterial">보유 재료</string>
+    <string name="CookingList">요리 목록</string>
+
+    <string name="yes">네</string>
+    <string name="check">확인</string>
+    <string name="cancel">취소</string>ddd
+
+    <string name="dialog_title1">재료 추가</string>
+    <string name="dialog_content1">서버에 등록되지않은 재료입니다 추가하시겠습니까?</string>
 </resources>
