일부 StateFlow 변환 완료 유통기한 설정작업 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="category_dialog1">카테고리 선택</string>
 
     <string name="network_check">네트워크가 끊겼습니다.\n네트워크 확인바랍니다.</string>
+
+    <string name="date_dialog1">유통기한 설정</string>
 </resources>
